# mandelbrot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: colors.rs  common.rs  main.rs
src/implementations/: mod.rs  parallel.rs  simd.rs  simd_boilerplate.rs  simple.rs
