[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AntoniosBarotsis/mandelbrot"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = []
default = []

[dependencies]
image = "0.24.6"
indicatif = "0.17.5"
nalgebra = "0.32.3"
rayon = "1.7.0"
paste = "1.0.13"
